--- a/Anul I - Licenta/Semestrul I/Programarea Algoritmilor/Laboratoare/Laboratorul 08 & 09 - Programare dinamica (WIP)/00. Programare dinamica - Enunturi.md
+++ b/Anul I - Licenta/Semestrul I/Programarea Algoritmilor/Laboratoare/Laboratorul 08 & 09 - Programare dinamica (WIP)/00. Programare dinamica - Enunturi.md
@@ -1,7 +1,7 @@
 # Laboratoarele 8 & 9 - Programare dinamică
 
 ## Probleme ușoare cu dinamică liniară
-1. [Trepte]([https://www.pbinfo.ro/probleme/1798/trepte)
+1. [Trepte](https://www.pbinfo.ro/probleme/1798/trepte)
 2. [Calculează pe n](https://www.pbinfo.ro/probleme/3672/calculeaza-pe-n)
 3. [Nr. de submulțimi](https://www.pbinfo.ro/probleme/3213/numardesubmultimi)
 4. [Dinamica02](https://www.pbinfo.ro/probleme/2260/dinamica02)
