--- a/Anul I - Licenta/Semestrul I/Programarea Algoritmilor/Laboratoare/Laboratorul 08 & 09 - Programare dinamica/00. Programare dinamica - Enunturi.md
+++ b/Anul I - Licenta/Semestrul I/Programarea Algoritmilor/Laboratoare/Laboratorul 08 & 09 - Programare dinamica/00. Programare dinamica - Enunturi.md
@@ -1,22 +1,22 @@
 # Laboratoarele 8 & 9 - Programare dinamică
 
 ## Probleme ușoare cu dinamică liniară
-1. [Trepte](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica%20(WIP)/01.%20Trepte)
-2. [Calculează pe n](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica%20(WIP)/02.%20Calculeaza%20pe%20n)
-3. [Nr. de submulțimi](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica%20(WIP)/03.%20Submultimi)
-4. [Dinamica02](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica%20(WIP)/04.%20Dinamica02)
-5. [Dinamica06](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica%20(WIP)/05.%20Dinamica06)
+1. [Trepte](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/01.%20Trepte)
+2. [Calculează pe n](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/02.%20Calculeaza%20pe%20n)
+3. [Nr. de submulțimi](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/03.%20Submultimi)
+4. [Dinamica02](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/04.%20Dinamica02)
+5. [Dinamica06](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/05.%20Dinamica06)
 
 ## Probleme ușoare în 2D
-6. [Cladire](https://www.pbinfo.ro/probleme/392/cladire)
-7. [Cladire1](https://www.pbinfo.ro/probleme/393/cladire1)
-8. [Pacman XI](https://www.pbinfo.ro/probleme/3265/pacman-xi)
-9. [SubTri](https://www.pbinfo.ro/probleme/385/sumtri)
+6. [Cladire](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/06.%20Cladire)
+7. [Cladire1](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/07.%20Cladire1)
+8. [Pacman XI](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/08.%20Pacman%20XI)
+9. [SumTri](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/09.%20Sumtri)
 
 ## Probleme de dificultate medie
-10. [Dinamica01](https://www.pbinfo.ro/probleme/2259/dinamica01)
-11. [Trepte2](https://www.pbinfo.ro/probleme/1991/trepte2)
-12. [Culori3](https://www.infoarena.ro/problema/culori3)
+10. [Dinamica01](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/10.%20Dinamica01)
+11. [Trepte2](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/11.%20Trepte2)
+12. [Culori3](https://github.com/vlaxcs/FMI-INFO-S15-2024-2027/tree/main/Anul%20I%20-%20Licenta/Semestrul%20I/Programarea%20Algoritmilor/Laboratoare/Laboratorul%2008%20%26%2009%20-%20Programare%20dinamica/12.%20Culori3)
 
 ## Probleme care necesită optimizare
 13. [Trepte 2.2](https://www.pbinfo.ro/probleme/3217/trepte2-2)
