Remastered SEMII courses

--- a/Anul I - Licenta/Semestrul II/Modul Psihopedagogic/Cursuri/Cursuri/02. Structura de Functionare a Educatiei - 03.03.2025.md
+++ b/Anul I - Licenta/Semestrul II/Modul Psihopedagogic/Cursuri/Cursuri/02. Structura de Functionare a Educatiei - 03.03.2025.md
@@ -1,15 +1,14 @@
 # Structura de Funcționare a Educației
 
 ## Educatorul - Individul și colectiv
-1. FCE (??)
+1. FCE (Formare și dezvoltare continuă)
     - Formare și dezvoltare permanentă -> integrarea în societate
-2. FiME (??)
+2. FiME (Finalitățile mari ale educației)
     - Idealul educației
-        - Idealul personalității autonome și ??
-    - SCG (Scopruile generale)
+        - Idealul personalității autonome și creative
+    - SCG (Scopurile generale)
         - Direcții majore de dezvoltare a educației (ex: informatizare)
-3. FME (Finalitățile mici ale educației)
-    - Obiective
+3. FME (Finalitățile mici ale educației) - Obiective
         - Generale
         - ??
         - Complete (Operaționale)
@@ -63,7 +62,7 @@
 O construcție aboslut necesară (mai ales în științele socio-umane).
 
 1. Educator (profesor)
-    - <-> FGE (??)
+    - <-> FGE (Finalitățile generale ale educației)
     - <-> Finalitățile mari ale educației (Legea Învățământului)
 
 2. (din 1) PPC (Proiect pedagogic curricular)
@@ -72,9 +71,19 @@ O construcție aboslut necesară (mai ales în științele socio-umane).
         - Metode
         - Evaluare
 
-3. (din 1, 2 prin normativitate). Educatul
+3. (din 1, 2 prin normativitate) Educatul
     - Educare / Dezvoltare (+)
     - Construit prin repertoriu comun (canal de comunicație) 
         - solicită empatie (nu blocaj pedagogic)
+    - Receptează și asimilează mesajul pedagogic
+    - Interiorizează și valorifică mesajul pedagogic (dovadă a desfășurării optime a cursului)
 
 4. (din 2 în 3) Strategii de educație
+
+5. (din 3) Răspuns dirijat
+
+6. (din 5) Răspuns auto-dirijat
+
+7. (din 6) 
+
+8. (din 3 în 1) Evaluare continuă
